// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`astro/if/stroustrup > if 1`] = `
"---
if (foo) {
  bar();
}
---

<script>
  if (foo) {
    bar();
  }
</script>
"
`;

exports[`astro/if/stroustrup > if...else (1) 1`] = `
"---
if (foo) {
  bar();
}
else {
  baz();
}
---

<script>
  if (foo) {
    bar();
  }
  else {
    baz();
  }
</script>
"
`;

exports[`astro/if/stroustrup > if...else (2) - with comment 1`] = `
"---
// foo is truthy
if (foo) {
  bar();
}
// foo is falsy
else {
  baz();
}
---

<script>
  // foo is truthy
  if (foo) {
    bar();
  }
  // foo is falsy
  else {
    baz();
  }
</script>
"
`;

exports[`astro/if/stroustrup > if...elseif...else 1`] = `
"---
if (foo) {
  bar();
}
else if (baz) {
  qux();
}
else {
  quux();
}
---

<script>
  if (foo) {
    bar();
  }
  else if (baz) {
    qux();
  }
  else {
    quux();
  }
</script>
"
`;
